--- a/app/src/main/res/values/shared.xml
+++ b/app/src/main/res/values/shared.xml
@@ -4,7 +4,10 @@
     <string name="status_true">TRUE</string>
     <string name="status_false">FALSE</string>
 
+    <string name="address_prof">Address Proof</string>
+
     <string name="open_tab_default">DEFAULT</string>
     <string name="open_tab_loan">LOAN</string>
+    <string name="open_tab_profile">PROFILE</string>
 
 </resources>
