--- a/app/src/main/res/layout/fragment_personal_id_layout.xml
+++ b/app/src/main/res/layout/fragment_personal_id_layout.xml
@@ -45,8 +45,10 @@
             <ImageView
                 android:id="@+id/imgProfile"
                 android:contentDescription="@string/app_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_75sdp"
+                android:layout_height="@dimen/_75sdp"
+                android:scaleType="fitXY"
+                android:adjustViewBounds="true"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:background="?selectableItemBackgroundBorderless"
                 app:layout_constraintBottom_toTopOf="@+id/view3"
