--- a/app/src/main/res/layout/layout_list_id_information.xml
+++ b/app/src/main/res/layout/layout_list_id_information.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_75sdp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="@dimen/_3sdp"
     android:background="@drawable/bg_white_view"
@@ -10,7 +10,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="@dimen/_10sdp">
 
         <com.app.l_pesa.common.CommonTextRegular
@@ -28,11 +28,10 @@
             android:id="@+id/txtIdNumber"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_1sdp"
             android:fontFamily="@font/montserrat"
             android:text="@string/id_number"
             android:textColor="@color/colorSemiBlack"
-            android:textSize="@dimen/_12sdp"
+            android:textSize="@dimen/_11sdp"
             app:layout_constraintBottom_toTopOf="@+id/txtUploadTime"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -43,7 +42,6 @@
             android:id="@+id/txtUploadTime"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_1sdp"
             android:fontFamily="@font/montserrat"
             android:text="@string/uploaded_on"
             android:textColor="@color/colorSemiBlack"
