--- a/app/src/main/res/values/shared.xml
+++ b/app/src/main/res/values/shared.xml
@@ -12,5 +12,6 @@
 
 
     <string name="profile_image_url">https://d2yh190ggw1qg8.cloudfront.net/uploads/personal/</string>
+    <string name="upload_business_url">https://d2yh190ggw1qg8.cloudfront.net/uploads/business/</string>
 
 </resources>
