--- a/app/src/main/res/layout/content_profile_edit_contact_info.xml
+++ b/app/src/main/res/layout/content_profile_edit_contact_info.xml
@@ -188,8 +188,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/email_address"
-                    android:inputType="textNoSuggestions|text"
-                    android:maxLength="25"
+                    android:inputType="textNoSuggestions|text|textEmailAddress"
+                    android:maxLength="40"
                     android:maxLines="1"
                     android:textSize="@dimen/_13sdp"
                     app:autoSizeMaxTextSize="@dimen/_14sdp"
