--- a/app/src/main/res/layout/content_profile_edit_personal.xml
+++ b/app/src/main/res/layout/content_profile_edit_personal.xml
@@ -161,6 +161,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:hint="@string/email"
+                            android:maxLength="40"
                             android:inputType="textEmailAddress"
                             android:textSize="@dimen/_12sdp"
                             android:textColor="@color/textColors"/>
