--- a/app/src/main/res/layout/content_loan_plan_details.xml
+++ b/app/src/main/res/layout/content_loan_plan_details.xml
@@ -146,7 +146,7 @@
                             android:padding="@dimen/_5sdp">
 
                             <com.app.l_pesa.common.CommonTextRegular
-                                android:id="@+id/txt_credit_score_at_time"
+                                android:id="@+id/txt_required_credit_score"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textColor="@color/color_gray_light"
@@ -566,11 +566,12 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/rlStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/rlImageStatus"
                     android:gravity="center"
-                    android:padding="@dimen/_3sdp"
+                    android:padding="@dimen/_1sdp"
 
                     >
 
@@ -586,6 +587,13 @@
 
 
                 </RelativeLayout>
+
+            <Button
+                android:layout_below="@+id/rlStatus"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_5sdp"
+                android:visibility="invisible"
+                />
 
             </RelativeLayout>
 
