--- a/app/src/main/res/layout/content_loan_history_details.xml
+++ b/app/src/main/res/layout/content_loan_history_details.xml
@@ -7,7 +7,7 @@
     android:background="@color/screenBackground"
     android:id="@+id/rlRoot"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".loanHistory.view.LoanHistoryDetailsActivity"
+    tools:context=".loanHistoryCurrent.view.LoanHistoryDetailsActivity"
     tools:showIn="@layout/activity_loan_history_details"
    >
 
