--- a/app/src/main/res/layout/content_loan_payback_scheduled.xml
+++ b/app/src/main/res/layout/content_loan_payback_scheduled.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_loan_payback_scheduled"
-    tools:context=".loanHistory.view.LoanPaybackScheduledActivity">
+    tools:context=".loanHistoryCurrent.view.LoanPaybackScheduledActivity">
 
 
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
