--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="screenBackground">#f3f3f3</color>
     <color name="colorYellow">#f3bb25</color>
-    <color name="colorRed">#ef3f3f</color>
+    <color name="colorRed">#D2322D</color>
     <color name="semi_white">#FEFFFF</color>
     <color name="color_gray_light">#a4a4a4</color>
     <color name="color_gray_text">#727272</color>
