--- a/app/src/main/res/drawable/bg_button_red.xml
+++ b/app/src/main/res/drawable/bg_button_red.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/_25sdp" />
 
-            <solid android:color="@color/colorRed" />
+            <solid android:color="@color/colorRedLight" />
         </shape>
     </item>
 </selector>
